--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 * ahkdll
 ** about
 A shared library for AutoHotkey by Naveen Garg
-Forked from Lexikos fork http://www.autohotkey.net/~Lexikos/AutoHotkey_L/
+based on Lexikos' custom build: http://www.autohotkey.net/~Lexikos/AutoHotkey_L/
 of AutoHotkey http://www.autohotkey.com/ by Chris Chris Mallett
 
 Download dll here: http://www.autohotkey.net/~tinku99/
@@ -14,11 +14,10 @@ for a more involved demonstration, try ahklisp:
 http://www.ahklisp.com
 http://www.autohotkey.com/forum/viewtopic.php?t=43081
 
-** License
+** License:  see license.txt
 changes from AutoHotkey and AutoHotkey_L also copyrighted under GPL by Naveen Garg. 2009
                     GNU GENERAL PUBLIC LICENSE
                        Version 2, June 1991
-
 ** discussion
 autohotkey forum: http://www.autohotkey.com/forum/topic43049.html
 
